darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__image_ref__invalid_decoding.snap
---
source: darkmatter/lib/tests/error_snapshots/image_ref.rs
expression: out
---
⤫ ImageRefError: invalid decoding
┃ 
┃ Value: eager
┃ 
┃ Accepted values: sync, async, auto.
