darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__image_ref__invalid_fetch_priority.snap
---
source: darkmatter/lib/tests/error_snapshots/image_ref.rs
expression: out
---
⨫ ImageRefError: invalid fetch priority
┃ Value: mid
Accepted values: high, low, auto.
