darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__image_ref__invalid_loading.snap
---
source: darkmatter/lib/tests/error_snapshots/image_ref.rs
expression: out
---
⨫ ImageRefError: invalid loading
┃ Value: never
Accepted values: eager, lazy.
