darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__image_ref__invalid_referrer_policy_no_match.snap
---
source: darkmatter/lib/tests/error_snapshots/image_ref.rs
expression: out
---
⨫ ImageRefError: invalid referrer policy
┃ Value: xyzzy
Accepted values: no-referrer, no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url.
