darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__image_ref__invalid_style_delegates.snap
---
source: darkmatter/lib/tests/error_snapshots/image_ref.rs
assertion_line: 94
expression: out
---
⤫ StylesheetError: invalid color value
┃ Value: notacolor
Accepted color tokens: #rgb, #rrggbb, rgb(r,g,b), rgba(r,g,b,a), a named color, or one of transparent / currentColor.
