darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__image_ref__malformed_html.snap
---
source: darkmatter/lib/tests/error_snapshots/image_ref.rs
expression: out
---
⤫ ImageRefError: malformed HTML image
┃ 
┃ Message: missing end of tag
┃ 
┃ Ensure the tag starts with &lt;img and ends with &gt; (self-closing is
┃ allowed).
