darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__image_ref__malformed_markdown_with_context.snap
---
source: darkmatter/lib/tests/error_snapshots/image_ref.rs
expression: out
---
⨫ ImageRefError: malformed markdown image
┃ Message: expected ( after alt
┃ 
┃ Image parsing failed here:
┃ 
┃   > 1 │ ![alt] image.png
┃ 
┃         ^ (offset 7)
Use the pattern !alt with balanced brackets.
