darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__image_ref__malformed_markdown_without_context.snap
---
source: darkmatter/lib/tests/error_snapshots/image_ref.rs
expression: out
---
⨫ ImageRefError: malformed markdown image
┃ Message: missing closing bracket
Use the pattern !alt with balanced brackets and parentheses.
