darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__image_ref__missing_source.snap
---
source: darkmatter/lib/tests/error_snapshots/image_ref.rs
assertion_line: 21
expression: out
---
⤫ ImageRefError: missing source
┃ Image reference must define either `src` or `srcset`.
Set src="..." or srcset="..." on the image.
