darkmatter/lib/tests/error_snapshots/snapshots/error_snapshots__image_ref__unrecognized_format.snap
---
source: darkmatter/lib/tests/error_snapshots/image_ref.rs
expression: out
---
⤫ ImageRefError: unrecognized image format
┃ 
┃ Input did not look like an HTML `<img ... />` tag or a Markdown `!alt`
┃ reference.
┃ 
┃ Use !alt for Markdown or &lt;img src="..." alt="..." /&gt; for HTML.
